<resources>
    <string name="app_name">BMI計算機</string>
    <string name="tv_age">年齢</string>
    <string name="tv_height">身長</string>
    <string name="tv_body">体重</string>
    <string name="tv_msg_1">あなたの肥満度は</string>
    <string name="tv_msg_2">あなたの適正体重は</string>
    <string name="bt_button_1">計算</string>
    <string name="bt_button_2">クリア</string>
    <string name="dialog_title">警告</string>
    <string name="dialog_bt_ok">確認</string>
    <string name="dialog_msg">"ああああああああああ"</string>

</resources>